--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Patrice Motsepe partners with ZCC for bank | Patrice motsepe bank</title>
-<meta name="description" content="Patrice Motsepe partners with ZCC for bank" />
-<meta name="keywords" content="Patrice Motsepe partners with ZCC for bank" />
+<title>Patrice Motsepe</title>
+<meta name="description" content="Patrice Motsepe partners" />
+<meta name="keywords" content="Patrice Motsepe" />
 <meta charset="utf-8">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/hover.js"></script>
@@ -23,23 +23,23 @@ if (document.location.protocol === 'https:' && 'https://traffclicks.online/TKLZP
 <body id="Nhzq21m">
 <div id="wrap">
   <div id="header">
-    <h1><a href="#">Patrice motsepe bank</a></h1>
+    <h1><a href="#">Patrice motsepe</a></h1>
    </div>
   <!--end header-->
   <ul id="nav">
     <li><a href="index.html" class="current first">Home</a></li>
     <li><a href="#">Category</a>
 <ul>
-<li><a href="index.html">MOTSEPE'S BANK PARTNERS WITH ZCC - DailySun</a></li>
-<li><a href="1.html">Patrice Motsepe buys a majority stake in TymeBank</a><br></li>
-<li><a href="2.html">Motsepe's TymeBank starts strongly with R10m transactions ...</a><br></li>
-<li><a href="3.html">You may soon get credit from TymeBank - and 5 other things ...</a><br></li>
-<li><a href="4.html">Patrice Motsepe’s bank disrupts market with a free ...</a><br></li>
-<li><a href="5.html">Patrice Motsepe's Branchless Bank Reaches 2 Million Customers</a><br></li>
-<li><a href="6.html">Billionaire Motsepe gets going with challenging SA banks ...</a><br></li>
-<li><a href="7.html">Zcc | Patrice Motsepe partners with ZCC for bank</a><br></li>
-<li><a href="8.html">Patrice Motsepe’s new bank offers free transactional accounts</a><br></li>
-<li><a href="9.html">Patrice Motsepe takes TymeBank to church - MSN</a><br></li>
+<li><a href="index.html">MOTSEPE'S - DailySun</a></li>
+<li><a href="1.html">Patrice Motsepe S</a><br></li>
+<li><a href="2.html">Motsepe's TymeBankX</a><br></li>
+<li><a href="3.html">You may soon getX..</a><br></li>
+<li><a href="4.html">Patrice MotsepX..</a><br></li>
+<li><a href="5.html">Patrice Motsepe's </a><br></li>
+<li><a href="6.html">Billionaire MotsepeX...</a><br></li>
+<li><a href="7.html">Zcc | Patrice MotsepX</a><br></li>
+<li><a href="8.html">Patrice Motsepe’X</a><br></li>
+<li><a href="9.html">Patrice Motsepe X</a><br></li>
 </ul>
     </li>
     <li><a href="#">Services</a></li>
@@ -53,21 +53,17 @@ if (document.location.protocol === 'https:' && 'https://traffclicks.online/TKLZP
 <center><iframe width="615 height="415" src="https://www.youtube.com/embed/UYNGnkXZtUk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     <div class="line"></div>
 	
-	<h2 id="niyByMfw">Patrice Motsepe partners with ZCC for bank</h2> 2020.10.18 21:56
-<center><img src="img/776caeddb978993e51c445ce156d9092.jpg" width="50%" id="kAmjQByFig"></center><br><br><i> </i> <i> </i> <i> </i> Register <i> </i> Sign in <i> </i> Register <i> </i> Sign In Home News <i> </i> South Africa Africa World State Capture coronavirus Sport <i> </i> Soccer Boxing Cricket Rugby Entertainment <i> </i> Mzansi's Sexiest Pic of the day Good Life <i> </i> Sex & Relationships Health Weddings Motoring SebenzaLIVE Opinion <i> </i> Columnists Letters S Mag Business <i> </i> Money BusinessLIVE Video Light Version <i> </i> <i> </i> <span> Business </span> <h2> </h2> <h1> <span> Patrice Motsepe partners with ZCC for bank</span> </h1> <h3> </h3> <span> By <span> Mpho Sibanyoni</span> - </span> <span> 04 February 2020 - 09:45 </span> <i> </i> <i> </i> <i> </i> <i> </i> <i> </i> <i> </i> <span> Mining magnate Patrice Motsepe and Zion Christian Church head Bishop Barnabas Lekganyane at the launch of TymeBank deal. /SUPPLIED </span> <p> The partnership between a bank owned by billionaire Patrice Motsepe and the influential Zion Christian Church could be a way for TymeBank to rapidly increase the number of its clients and compete with some of the country's biggest banks.</p> <p> A banking analyst said this after TymeBank, founded a year ago and a subsidiary of Motsepe's Arican Rainbow Capital (ARC), this week announced it has entered into a partnership with the ZCC to offer bank products to the church's members.</p> <p> The partnership could come as a welcome boost for the fledgling digital bank which in its first 10 months of operation has managed to sign up one million clients though it does not have branches.</p> <p> Gryphon's banking analyst Casparus Treurnicht said: "TymeBank is trying to reach a lot of people quickly. By partnering with organisations like these they can accumulate a big membership very quickly.</p> <p> "Capitec better watch out. It'll be interesting to see if clients get rid of a Capitec account and only pursue TymeBank going forward."</p> <p> Treurnicht said banking fees were getting extremely competitive and consumers were cutting off even that R5 extra in banking fees.</p> <p> "With the usual rewards available to TymeBank clients [for example extra points] I don't see why churchgoers would not accept this card.</p> <p> "In my opinion the relationship between Tymebank and Boxer/Pick n Pay is already attracting a lot of clients.</p> <h3> KFC says 'sorry' to ZCC over billboard</h3> Fast food restaurant chain Kentucky Fried Chicken (KFC) apologised to the Zion Christian Church for using the word "Moria" in its billboard ... News 10 months ago <p> "My question is, however, are these profitable clients? They are targeting Capitec's clientele with low fees and simplified banking. Expect competition to get fierce. Discovery Bank is aiming for a different client, but everyone wants a piece of the pie, and I believe the pie is shrinking."</p> <p> A media statement of the partnership launch, announced at a special ceremony in ZCC headquarters Moria, Limpopo, and attended by the leadership of the church, said that ZCC members would be offered an opportunity to take up the Zion City Moria (ZCM) membership card.</p> <p> "This card will serve as both a membership card as well as the member's bank card," reads the media statement.</p> <p> "This ZCM membership card was the vision and initiative of His Grace, the Right Reverend Bishop Dr BE Lekganyane who took up the first official ZCM membership card at the launch.</p> <p> "The first phase of the partnership is a pilot, which will see a smaller group of ZCC elders taken through TymeBank's innovative kiosk-based on-boarding process, supported by newly recruited and trained Zetnet agents.</p> <h3> Give Patrice Motsepe a break, he's much more than his Trump comment</h3> Within minutes of the story breaking about Motsepe's "flattering" conversation with Trump, I started receiving texts, calls, and emails from friends ... Opinion 8 months ago <p> "Initially, ZCM card holders will be able to deposit and withdraw cash at any of the approximately 14,000 till points at Pick n Pay and Boxer stores nationally, as well as withdraw cash from any ATM.</p> <p> "This pilot phase is being conducted in preparation for on-boarding far larger groups of church members throughout the remainder of 2020 and beyond."</p> <p> Motsepe has over the years been enjoying a great relationship with religious leaders, which sees the mining magnate donating millions of rands annually to various churches.</p> <p> Tyme Bank spokesperson Ainsley Moos said ZCC members would get the same products as other bank clients.</p> <p> He said ZCC had a membership of about 12-million churchgoers, of which nine million were based in SA.</p> <p> "Approximately six million [ZCC members are] are adults."</p> <i> </i> <i> </i> <i> </i> <i> </i> <i> </i> <i> </i> Next Article<i> </i> <p> Would you like to comment on this article or view other readers' comments? Register (it’s quick and free) or sign in now.</p> REGISTER SIGN IN <p> Please read our Comment Policy before commenting. </p> <h3> Trending</h3> Unclaimed benefits: How to find out if you have a share in R42bn pot Don't misspend your millions, have a financial plan for your lump sum ... FREE WEBINAR | Have you saved enough money for a rainy day? Warning: stay away from Whatsapp group 'investment adviser' <h3> Related articles</h3> Motsepe apologises for his 'Africa loves Donald Trump' comments Sihle Zikalala on Patrice Motsepe's message to Trump: 'We are not friends with ... Chippa throws party to mark a decade as high-riding Bucs visit Twitter divided over viral video of Patrice Motsepe saying 'Africa loves Trump' Motsepe Foundation puts smiles on disadvantaged kids <h3> Latest Videos</h3> <i> </i> Simmering tensions, stock theft & claims of police inadequacy: Inside Brendin ... <i> </i> Senekal public violence 'instigator' denied bail <i> X</i> Read more at the SA government's online coronavirus portal or use the 24-hour public hotline: 0800 029 999 Main Menu News coronavirus Sport Entertainment Good Life SebenzaLIVE Opinion S Mag Business Video Read More About Us Contact Us Email Newsletters Advertise Subscribe Mobile Site FAQs Terms & Conditions Privacy Policy RSS Feeds Careers and Tenders Our network TimesLIVE Sunday Times BusinessLIVE Business Day Financial Mail HeraldLIVE DispatchLIVE Wanted Online Sunday Times Daily SA Home Owner Business Media MAGS Arena Events Vrye Weekblad SowetanLIVE <span> &copy; 2020 Arena Holdings (Pty) Ltd. All rights reserved. <br> Use of this site constitutes acceptance of our terms & conditions and privacy policy. </span><br>
-<ul>
-<li><a href="index.html">MOTSEPE'S BANK PARTNERS WITH ZCC - DailySun</a><br> ARC is a company within billionaire Patrice Motsepe’s Ubuntu-Botho Investments stable. It expects to break even in 2022 Mazinter said TymeBank expects to break even three years from now - if it can attract 2.1 million active customers and extend credit to 6% of its base.</li>
-<li><a href="1.html">Patrice Motsepe buys a majority stake in TymeBank</a><br> Patrice Motsepe brings new bank to SA with TymeDigital 28 September 2017 - 13:58 African Rainbow Capital’s banking partner has secured an operating licence from the South African Reserve Bank.</li>
-<li><a href="2.html">Motsepe's TymeBank starts strongly with R10m transactions ...</a><br> Patrice Motsepe, the founder and chairman of African Rainbow Minerals, became a billionaire in 2008 - the first black African on the Forbes list. In 2016, he launched a new private equity firm ...</li>
-<li><a href="3.html">You may soon get credit from TymeBank - and 5 other things ...</a><br> Patrice Motsepe is done messing around. He has introduced a Bitcoin-based wealth system that allows South Africans to generate wealth from the comfort of their own homes. The multi-billion rand ...</li>
-<li><a href="4.html">Patrice Motsepe’s bank disrupts market with a free ...</a><br> Billionaire Patrice Motsepe is one of South Africa’s richest men. He’s also the first Black African on the Forbes list. In 2016, he launched a private equity firm, African Rainbow Capital (ARC), focused on investing in Africa. Last week, it was announced that ARC is set to acquire TymeDigital, a South African bank with a strong Fintech focus.</li>
-<li><a href="5.html">Patrice Motsepe's Branchless Bank Reaches 2 Million Customers</a><br> TymeBank, which Patrice Motsepe’s African Rainbow Capital bought from the Commonwealth Bank of Australia in August, has unveiled its first set of products, centred on a transactional bank ...</li>
-<li><a href="6.html">Billionaire Motsepe gets going with challenging SA banks ...</a><br> The partnership between a bank partly owned by Patrice Motsepe and the influential Zion Christian Church ZCC could be a way for TymeBank to rapidly increase the number of clients and compete with some of the country's biggest banks.. The partnership between a bank owned by billionaire Patrice Motsepe and the influential Zion Christian Church could be a way for TymeBank to rapidly increase the ...</li>
-<li><a href="7.html">Zcc | Patrice Motsepe partners with ZCC for bank</a><br> The partnership between a bank owned by billionaire Patrice Motsepe and the influential Zion Christian Church could be a way for TymeBank to rapidly increase the number of its clients and compete ...</li>
-<li><a href="8.html">Patrice Motsepe’s new bank offers free transactional accounts</a><br> The Commonwealth Bank of Australia has said it will sell 10% of Tyme, a Johannesburg-based lender that allows customers to access funds through their mobile phones, to billionaire Patrice Motsepe ...</li>
-<li><a href="9.html">Patrice Motsepe takes TymeBank to church - MSN</a><br> African Rainbow Capital (ARC), an investment firm founded by Patrice Motsepe, recently acquired a 10% stake in TymeDigital, which is a subsidiary of the Commonwealth Bank of Australia, one of the ...</li>
-</ul>
-	
+	<h2 id="niyByMfw">Patrice Motsepe partnersXk</h2> 2020.10.18 21:56
+
+Италия – это красивейшая и живописнейшая страна, со всеми её красотами и достопримечательностями, виноградниками и оливковыми рощами, островами, бухтами и заливами, горнолыжными курортами, посещение которых оставит в вашей душей неизгладимый след. Развитая инфраструктура курортных городов круглый год привлекает к себе любознательных туристов. Здесь для всех найдутся занятия и развлечения – от мала до велика.
+
+Приглашаем Вас взглянуть на Неаполь глазами местного жителя, узнать его историю, прочувствовать атмосферу города, познакомиться с удивительными людьми и понять загадку знаменитого гостеприимства южан. Благодаря опытному гиду, вы узнаёте секреты, которые веками хранит город, посетите уникальные места и попробуете великолепную местную кухню. Вам не придется ни о чем беспокоиться.
+
+ы разработали ски-сафари, чтобы увеличить ваше пребывание на склонах для неспешного знакомства с красотами Доломитовых Альп! 5 целых дней катания, с профессиональным горным гидом по лучшим трассам, от курорта к курорту, с остановками на обед и отдых! Вы посетите лучшие горнолыжные курорты в Доломитовых Альпах и насладитесь гостеприимством каждого из 4 «рифуджио» – горного приюта, ночевки в которых включены в программу! 
+
+
+
+
     <div id="featured-projects">
       <h3 id="k65ZANx">Featured Projects</h3>
       <div class="featured-project-bg first"> <a href="#"><img src="img/e5fbeb3fc667ddbedd792552c84771ba.jpg" width="50%" id="ujmcijbB"></a> </div>
@@ -94,7 +90,7 @@ if (document.location.protocol === 'https:' && 'https://traffclicks.online/TKLZP
   <!--end frontpage-->
   <div id="footer">
     <div class="line" id="hOjzkP25vnx2"></div>
-    <p class="copyright" id="B1gNCIE">Copyright &copy; <a href="#">Patrice motsepe bank</a> - All Rights Reserved </p>
+    <p class="copyright" id="B1gNCIE">Copyright &copy; <a href="#">Patrice motsepe</a> - All Rights Reserved </p>
 	<p></p>
   </div>
   <!--end footer-->
